2001-06-20  Jesper Skov  <jskov@redhat.com>

	* include/flash_28fxxx.inl (flash_hwr_init): Fix bad size
	calculations.

2001-05-23  Jesper Skov  <jskov@redhat.com>

	* cdl/flash_intel_28fxxx.cdl: Links flash functions to RAM. IO
	driver should not copy them there.

2001-03-23  Jesper Skov  <jskov@redhat.com>

	* include/flash_28fxxx.inl (flash_program_buf): Calculate correct
	wc for buffered writes.
	(flash_query): Don't return until flash is safely back in data
	mode.

2001-03-21  Jesper Skov  <jskov@redhat.com>

	* Package cloned from at29cxxxx driver. Changed to support Intel
	FlashFile.

//===========================================================================
//####COPYRIGHTBEGIN####
//                                                                          
// -------------------------------------------                              
// The contents of this file are subject to the Red Hat eCos Public License 
// Version 1.1 (the "License"); you may not use this file except in         
// compliance with the License.  You may obtain a copy of the License at    
// http://www.redhat.com/                                                   
//                                                                          
// Software distributed under the License is distributed on an "AS IS"      
// basis, WITHOUT WARRANTY OF ANY KIND, either express or implied.  See the 
// License for the specific language governing rights and limitations under 
// the License.                                                             
//                                                                          
// The Original Code is eCos - Embedded Configurable Operating System,      
// released September 30, 1998.                                             
//                                                                          
// The Initial Developer of the Original Code is Red Hat.                   